--- a/public/saved.html
+++ b/public/saved.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>News Scrapper</title>
-    <style>
-        body { background-color: #F2F6D0 }
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>News Scrapper</title>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
+    crossorigin="anonymous">
+  <style>
+    body { background-color: #F2F6D0 }
         #wrapper {
           width: 960px;
           margin-left: auto;
@@ -38,9 +41,44 @@
         }
       </style>
 </head>
+
 <body>
-    
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src="app.js"></script>
+    <div class="container">
+        <div class="jumbotron text-center">
+          <h1>Welcome to Top News!</h1>
+        </div>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <a class="navbar-brand" href="index.html">Top News!</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+              <div class="navbar-nav">
+                <a class="nav-item nav-link" href="index.html">Home </a>
+                <a class="nav-item nav-link active" href="saved.html">Profile <span class="sr-only">(current)</span></a>
+              </div>
+            </div>
+          </nav>
+        <div class="card">
+  
+        </div>
+      
+    </div>
+  <div id="wrapper">
+    <form action="/submit" method="post">
+      <h1>Hi User!</h1>
+      <h2>Enter a Note!</h2>
+      <input type="text" name="title" placeholder="Title">
+      <textarea type="text" name="body">Write Note Here</textarea>
+
+      <input type="submit">
+      <a href="/Article">See your saved articles!</a>
+      <a href="/user">See your profile!</a>
+      <a href="/populated">See your profile, populated with notes!</a>
+    </form>
+  </div>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <script src="app.js"></script>
 </body>
+
 </html>
